logs/dag_id=dag_with_postgres_operator/run_id=scheduled__2024-03-06T000000+0000/task_id=create_postgres_table/attempt=1.log
[2024-03-09T14:08:12.782+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator.create_postgres_table scheduled__2024-03-06T00:00:00+00:00 [queued]>
[2024-03-09T14:08:12.894+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator.create_postgres_table scheduled__2024-03-06T00:00:00+00:00 [queued]>
[2024-03-09T14:08:12.898+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 6
[2024-03-09T14:08:13.489+0000] {taskinstance.py:2214} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2024-03-06 00:00:00+00:00
[2024-03-09T14:08:13.508+0000] {standard_task_runner.py:60} INFO - Started process 2101 to run task
[2024-03-09T14:08:13.552+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator', 'create_postgres_table', 'scheduled__2024-03-06T00:00:00+00:00', '--job-id', '198', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpihd4uljw']
[2024-03-09T14:08:13.568+0000] {standard_task_runner.py:88} INFO - Job 198: Subtask create_postgres_table
[2024-03-09T14:08:14.444+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_with_postgres_operator.create_postgres_table scheduled__2024-03-06T00:00:00+00:00 [running]> on host 3b9d9f11e4f2
[2024-03-09T14:08:15.367+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='coder2j' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator' AIRFLOW_CTX_TASK_ID='create_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2024-03-06T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-03-06T00:00:00+00:00'
[2024-03-09T14:08:15.375+0000] {sql.py:276} INFO - Executing: create table if not exists dag_runs(
                    dt date,
                    dag_id character varying,
                    primary key (dt, dag_id);


                create table if not exists dag_runs2(
                    dt date,
                    dag_id character varying,
                    primary key (dt, dag_id);




        )
        
[2024-03-09T14:08:15.477+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-09T14:08:15.880+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-09T14:08:15.961+0000] {sql.py:457} INFO - Running statement: create table if not exists dag_runs(
                    dt date,
                    dag_id character varying,
                    primary key (dt, dag_id);


                create table if not exists dag_runs2(
                    dt date,
                    dag_id character varying,
                    primary key (dt, dag_id);




        )
        , parameters: None
[2024-03-09T14:08:15.986+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 4:                     primary key (dt, dag_id);
                                                    ^

[2024-03-09T14:08:16.043+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator, task_id=create_postgres_table, execution_date=20240306T000000, start_date=20240309T140812, end_date=20240309T140816
[2024-03-09T14:08:16.133+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 198 for task create_postgres_table (syntax error at or near ";"
LINE 4:                     primary key (dt, dag_id);
                                                    ^
; 2101)
[2024-03-09T14:08:16.212+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-09T14:08:16.307+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
